# training-advisorbot

./: CMakeLists.txt
src/: AdvisorbotMain.cpp  AdvisorbotMain.h  CSVReader.cpp  CSVReader.h  Calculations.cpp  Calculations.h  OrderBook.cpp  OrderBook.h  OrderBookEntry.cpp  OrderBookEntry.h  Utils.cpp  Utils.h  main.cpp
